# rust-svn

./: .gitignore  Cargo.toml  README.md
layout/: Design.glade
src/: cli.rs  crap.rs  gui.rs  logic.rs  main.rs
src/layout/: Design.glade
